<resources>
    <string name="app_name"><u>QuejApp</u></string>
    <string name="text1">Este es un Texto de ejemplo</string>
    <string name="text2">Este es un Texto de ejemplo para cada tab</string>
    <string name="button1">Click para ver los tabs</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="no_tienes_cuenta_registrate">No Tienes Cuenta? <u>Registrate</u></string>
    <string name="direccion_de_correo">Direccion de Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta_logeate">Ya tienes cuenta? <u>Logeate</u></string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="usuario_contraseña_incorrectos">El usuario o la contraseña ingresados son incorrectos</string>
    <string name="eleccion_primer_tab">Por favor, eliga que desea realizar a continuación</string>
    <string name="usuario_y_contraseña_data">Los datos de usuario y contraseña</string>
    <string name="datos_personales">Los datos personales de usuario</string>
    <string name="actualizar_data">Actualizar datos</string>
    <string name="cancelar_actualizar">Cancelar</string>
    <string name="campos_obligatorios">Campos obligatorios</string>
    <string name="actualice_datos_sensibles"><u>Actualice su usuario y contraseña</u></string>
    <string name="actualice_datos_personales"><u>Actualice sus datos personales</u></string>
    <string name="actualizacion_datos"><u>Actualización de datos</u></string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="confirmacion_actualizacion">¿Esta seguro que desea actualizar sus datos?</string>
    <string name="confirmar_act_datos">Confirmación de actualizacion</string>
    <string name="escriba_aqui">Escriba aqui</string>
    <string name="tab_1">¿Que desea hacer?</string>
    <string name="tab_2">Reclamos genericos</string>
    <string name="tab_3">Mas sobre QuejApp</string>
    <string name="deslogueo_exito">Se ha deslogeado con exito</string>
    <string name="seleccione_el_tipo_de_reclamo_que_quiere_ingresar">Seleccione el tipo de reclamo que quiere ingresar</string>
    <string name="confirmar_reclamo">confirmar reclamo</string>
    <string name="blanquear_reclamo">blanquear reclamo</string>
    <string name="cancelar_reclamo">cancelar</string>
    <string name="email_invalido">El formato de email introducido no es correcto o esta vacio, intente nuevamente</string>
    <string name="campos_no_completados">Debe completar los campos obligatorios</string>
    <string name="usuario_existente">El usuario ya existe, pruebe con otro nombre de usuario</string>
    <string name="cargar_nuevo_formulario">Cargar nuevo Formulario</string>
    <string name="hacer_otra_cosa">Hacer Otra cosa</string>
    <string name="desloguearse">Desloguearse</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="tipo_reclamo">Seleccione el tipo de reclamo</string>
    <string name="tecnique_data"><u>Datos Tecnicos</u></string>
    <string name="tecnique_descripcion">Aplicación que actualmente se encuentra en su primera version v1.0, desarrollada por integrantes de un equipo de trabajo en Belatrix SF. Lucas Farias - Elias Medina - Gaston Grippi</string>
    <string name="sistema_operativo"><u> - Sistema operativo soportado:</u> Android 4.+/5.+/6.+</string>
    <string name="agradecimiento">¡Muchas gracias por hacer uso de nuestra aplicacion!</string>
    <string name="mas_sobre_quejapp">   Quejapp es una aplicacion de uso abierto a todo publico. \n\n Su proposito principal es agilizar los reclamos que se desean hacer en cualqueir supermercado, sin la necesidad de recurrir a el tipico libro de quejas y sugerencias, que en su mayor parte de los distintos locales no esta disponible al publico, o se debe pedir y consume tiempo.</string>
    <string name="linkeable"><u>Para mas informacion, siga este link</u></string>
    <string name="title_activity__opiniones">Activity_Opiniones</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
