<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_tabs_90"
    android:paddingBottom="@dimen/Size60dp"
    android:paddingLeft="@dimen/Size30dp"
    android:paddingRight="@dimen/Size40dp"
    android:paddingTop="@dimen/Size60dp"
    tools:context="com.projectbelatrix.quejapp.Activities.DatosTecnicosActivity">

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Size50dp"
        android:padding="@dimen/Size10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/Size20dp" />

    <TextView
        android:id="@+id/textTecnique_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Size50dp"
        android:layout_below="@+id/text_app_name"
        android:padding="@dimen/Size10dp"
        android:text="@string/tecnique_data"
        android:textColor="@color/colorTextBlack"
        android:textSize="@dimen/Size15dp" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Size100dp"
        android:layout_below="@+id/textTecnique_data"
        android:text="@string/tecnique_descripcion"
        android:textColor="@color/colorTextBlack" />

    <TextView
        android:id="@+id/sistema"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Size50dp"
        android:layout_below="@+id/descripcion"
        android:text="@string/sistema_operativo"
        android:textColor="@color/colorTextBlack" />

    <TextView
        android:id="@+id/agradecimiento"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Size200dp"
        android:layout_below="@+id/sistema"
        android:paddingTop="@dimen/Size120dp"
        android:text="@string/agradecimiento"
        android:textColor="@color/colorTextBlack" />

</RelativeLayout>
