<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="@dimen/Size60dp"
        android:paddingRight="@dimen/Size60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/Size16dp">
                <ImageView
                    android:layout_width="@dimen/Size20dp"
                    android:layout_height="@dimen/Size20dp"
                    android:src="@drawable/usrusr"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="@dimen/Size15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="@dimen/Size16dp"
                    android:inputType="text"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Size1dp"
                android:background="#4a5a71"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/Size16dp">
                <ImageView
                    android:layout_width="@dimen/Size20dp"
                    android:layout_height="@dimen/Size20dp"
                    android:src="@drawable/pswd"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="@dimen/Size15dp"
                    android:background="#00000000"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textSize="@dimen/Size16dp"
                    android:textColor="#fff"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/Size1dp"
                android:background="#4a5a71"></LinearLayout>
        </LinearLayout>
    </LinearLayout>s
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/Size60dp"
        android:paddingRight="@dimen/Size60dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="@dimen/Size20dp">
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009a9a"
            android:text="@string/login"
            android:textColor="#d9e5f3"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:padding="@dimen/Size16dp"
            android:layout_marginBottom="@dimen/Size50dp"
            android:letterSpacing="0.2"/>
        <TextView
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_tienes_cuenta_registrate"
            android:textColor="#d9e5f3"
            android:letterSpacing="0.1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="@dimen/Size400dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/SizeLogo"
            android:src="@drawable/logo5"
            android:layout_weight="0.72"
            android:id="@+id/imageView2" />
    </LinearLayout>
</RelativeLayout>